--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <title>CloudProject</title>
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'js/jquery-1.11.0.min.js', 'bootstrap.min.js', 'bootstrap-hover-dropdown.min.js', 'js/owl.carousel.min.js', 'js/jquery.parallax-1.1.3.js', 'js/jquery.nicescroll.js', 'js/jquery.prettyPhoto.js', 'js/jquery-ui-1.10.4.custom.min.js', 'js/jquery.forms.js', 'js/jquery.sticky.js', 'js/waypoints.min.js', 'js/jquery.isotope.min.js', 'js/jquery.gmap.min.js', 'js/switch.js', 'js/custom.js', 'js/jquery.themepunch.tools.min.js', 'js/jquery.themepunch.revolution.min.js', 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
