--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -4,12 +4,6 @@
     <div class="row">
       <div class="col-xs-6">
         <div class="th-text pull-left">
-          <div class="th-item"> <a href="#"><i class="fa fa-phone"></i> 05-460789986</a> </div>
-          <div class="th-item"> <a href="#"><i class="fa fa-envelope"></i> MAIL@STARHOTEL.COM </a></div>
-        </div>
-      </div>
-      <div class="col-xs-6">
-        <div class="th-text pull-right">
           <div class="th-item">
             <div class="btn-group">
               <button class="btn btn-default btn-xs dropdown-toggle js-activated" type="button" data-toggle="dropdown"> English <span class="caret"></span> </button>
@@ -24,6 +18,28 @@
           <div class="th-item">
             <div class="social-icons"> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-youtube-play"></i></a> </div>
           </div>
+        </div>
+      </div>
+      <div class="col-xs-6">
+        <div class="th-text pull-right">
+          <% if !user_signed_in? %>
+            <div class="th-item"> 
+              <a href="<%= new_user_session_path %>"><i class="fa fa-user"></i> Login</a> 
+            </div>
+            <div class="th-item"> 
+              <a href="<%= new_user_registration_path %>"><i class="fa fa-user-plus"></i> Sign Up </a>
+            </div>
+          <% else %>
+            <div class="th-item"> 
+              <a> Welcome, <strong> <%= current_user.email %> </strong></a> 
+            </div>
+            <div class="th-item"> 
+              <a href="<%= edit_user_registration_path %>"><i class="fa fa-cog"></i> Edit Profile </a>
+            </div>
+            <div class="th-item"> 
+              <i class="fa fa-power-off"></i> <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
+            </div>
+          <% end %>
         </div>
       </div>
     </div>
@@ -46,7 +62,7 @@
         </a> </div>
       <div id="navbar-collapse-grid" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li class="dropdown active"> <a href="index.html">Home</a>
+          <li class="dropdown active"> <a href="<%= root_path %>">Home</a>
           </li>
 		  <li class="dropdown"> <a href="#" data-toggle="dropdown" class="dropdown-toggle js-activated">Rooms<b class="caret"></b></a>
             <ul class="dropdown-menu">
