--- a/app/assets/stylesheets/css/settings.css.erb
+++ b/app/assets/stylesheets/css/settings.css.erb
@@ -1490,10 +1490,10 @@ img.tp-slider-alternative-image	{	width:100%; height:auto;}
 .tp-rightarrow.square-old								{	z-index:100;cursor:pointer; position:relative;	background:url(../assets/arrow_right2.png) no-Repeat top left;	width:12px;	height:17px;   float:left;	margin-left:0px; margin-top:0px}
 
 
-.tp-leftarrow.default									{	z-index:100;cursor:pointer; position:relative;	background-image: url(<%= asset_path 'img/large_left.png' %>); no-Repeat 0 0; width:40px;	height:40px;
+.tp-leftarrow.default									{	z-index:100;cursor:pointer; position:relative;	background-image: url(<%= asset_path 'img/large_left.png' %>); width:40px;	height:40px;
 
 														}
-.tp-rightarrow.default									{	z-index:100;cursor:pointer; position:relative; background-image: url(<%= asset_path 'img/large_right.png' %>); no-Repeat 0 0; width:40px;	height:40px;
+.tp-rightarrow.default									{	z-index:100;cursor:pointer; position:relative; background-image: url(<%= asset_path 'img/large_right.png' %>); width:40px;	height:40px;
 
 														}
 
