--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -62,14 +62,8 @@
         </a> </div>
       <div id="navbar-collapse-grid" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li class="dropdown active"> <a href="<%= root_path %>">Home</a>
-          </li>
-		  <li class="dropdown"> <a href="#" data-toggle="dropdown" class="dropdown-toggle js-activated">Rooms<b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><a href="room-list.html">Room List View</a></li>
-              <li><a href="room-detail.html">Room Detail</a></li>
-            </ul>
-          </li>
+          <li class="active"> <a href="<%= root_path %>">Home</a></li>
+          <li class=""> <a href="<%= rooms_path %>">Rooms</a></li>
           <li class="dropdown"> <a href="#" data-toggle="dropdown" class="dropdown-toggle js-activated">Features<b class="caret"></b></a>
             <div class="dropdown-menu"> 
               <div class="yamm-content">
