--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -43,65 +43,50 @@
     <!-- Reservation form -->
     <section id="reservation-form" class="mt50 clearfix">
       <div class="col-sm-12 col-md-4">
-        <form class="reservation-vertical clearfix" role="form" method="post" action="http://www.slashdown.net/starhotel-html/php/reservation.php" name="reservationform" id="reservationform">
-          <h2 class="lined-heading"><span>Reservation</span></h2>
-          <div class="price">
-            <h4>Double Room</h4>
-            &euro; 99,-<span> a night</span></div>
-          <div id="message"></div>
-          <!-- Error message display -->
-          <div class="form-group">
-            <label for="email" accesskey="E">E-mail</label>
-            <input name="email" type="text" id="email" value="" class="form-control" placeholder="Please enter your E-mail"/>
-          </div>
-          <div class="form-group">
-            <select class="hidden" name="room" id="room">
-              <option selected="selected">Double Room</option>
-            </select>
-          </div>
-          <div class="form-group">
-            <label for="checkin">Check-in</label>
-            <div class="popover-icon" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="right" data-content="Check-In is from 11:00"> <i class="fa fa-info-circle fa-lg"> </i> </div>
-            <i class="fa fa-calendar infield"></i>
-            <input name="checkin" type="text" id="checkin" value="" class="form-control" placeholder="Check-in"/>
-          </div>
-          <div class="form-group">
-            <label for="checkout">Check-out</label>
-            <div class="popover-icon" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="right" data-content="Check-out is from 12:00"> <i class="fa fa-info-circle fa-lg"> </i> </div>
-            <i class="fa fa-calendar infield"></i>
-            <input name="checkout" type="text" id="checkout" value="" class="form-control" placeholder="Check-out"/>
-          </div>
-          <div class="form-group">
-            <div class="guests-select">
-              <label>Guests</label>
-              <i class="fa fa-user infield"></i>
-              <div class="total form-control" id="test">1</div>
-              <div class="guests">
-                <div class="form-group adults">
-                  <label for="adults">Adults</label>
-                  <div class="popover-icon" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="right" data-content="+18 years"> <i class="fa fa-info-circle fa-lg"> </i> </div>
-                  <select name="adults" id="adults" class="form-control">
-                    <option value="1">1 adult</option>
-                    <option value="2">2 adults</option>
-                    <option value="3">3 adults</option>
-                  </select>
-                </div>
-                <div class="form-group children">
-                  <label for="children">Children</label>
-                  <div class="popover-icon" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="right" data-content="0 till 18 years"> <i class="fa fa-info-circle fa-lg"> </i> </div>
-                  <select name="children" id="children" class="form-control">
-                    <option value="0">0 children</option>
-                    <option value="1">1 child</option>
-                    <option value="2">2 children</option>
-                    <option value="3">3 children</option>
-                  </select>
-                </div>
-                <button type="button" class="btn btn-default button-save btn-block">Save</button>
+        <% if user_signed_in? %>
+          <%= simple_form_for :booking, url: book_room_room_path(@room), method: :post, class: 'reservation-vertical clearfix' do |f| %>
+            <h2 class="lined-heading"><span>Reservation</span></h2>
+            <div class="price">
+              <h4><%= @room.category %> Room</h4>
+              &euro; <%= @room.price %>,-<span> a night</span></div>
+            <div id="message"></div>
+            <!-- Error message display -->
+            <div class="form-group">
+              <select class="hidden" id="room">
+                <option selected="selected">Double Room</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="checkin">Check-in</label>
+              <div class="popover-icon" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="right" data-content="Check-In is from 11:00"> <i class="fa fa-info-circle fa-lg"> </i> </div>
+              <i class="fa fa-calendar infield"></i>
+              <%= f.input :check_in, input_html: { id: 'checkin', class: 'form-control', placeholder: 'Check-in' }, label: false %>
+            </div>
+            <div class="form-group">
+              <label for="checkout">Check-out</label>
+              <div class="popover-icon" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="right" data-content="Check-out is from 12:00"> <i class="fa fa-info-circle fa-lg"> </i> </div>
+              <i class="fa fa-calendar infield"></i>
+              <%= f.input :check_out, input_html: { id: 'checkout', class: 'form-control', placeholder: 'Check-out' }, label: false %>
+            </div>
+            <div class="form-group">
+              <div class="guests-select">
+                <label>Guests</label>
+                <i class="fa fa-user infield"></i>
+                <%= f.input :guests, input_html: { class: 'form-control' }, label: false %>
+              </div>
+            </div>
+            <%= f.submit 'Book Now', class: 'btn btn-primary btn-block btn-color-black' %>
+          <% end %>
+        <% else %>
+          <div class="panel panel-info">
+            <div class="panel-heading">Book Room</div>
+            <div class="panel-body">
+              <div class="alert alert-info">
+                <strong>Info!</strong> You must Sign in to Book Room.
               </div>
             </div>
           </div>
-          <button type="submit" class="btn btn-primary btn-block">Book Now</button>
-        </form>
+        <% end %>
       </div>
     </section>
     
