--- a/app/views/shared/_flash_messages.html.erb
+++ b/app/views/shared/_flash_messages.html.erb
@@ -2,7 +2,7 @@
  <% flash.each_with_index do |(k,v),i| %>
    <% next if k.to_s == 'timedout' %>
    <div id="message-<%= i %>" class="actual-message">
-     <div style="padding: 17px;" class="alert <%= bootstrap_class_for(k.to_s.sub('_stay', '')) %>">
+     <div class="alert <%= bootstrap_class_for(k.to_s.sub('_stay', '')) %>">
        <% if v.is_a?(Array) %>
          <ul>
            <% v.each do |vv| %>
