--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -96,7 +96,7 @@
         <div class="row">
           <div class="col-sm-7 mt50">
             <h2 class="lined-heading"><span>Room Details</span></h2>
-            <h3 class="mt50">Table overview</h3>
+            <h3 class="mt50">Room overview</h3>
             <table class="table table-striped mt30">
               <tbody>
                 <tr>
@@ -133,6 +133,56 @@
             <div class="tab-content">
               <div class="tab-pane fade in active" id="overview">
                 <p><%= @room.description %></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Room Content -->
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-7 mt50">
+            <h2 class="lined-heading"><span>Room Reviews</span></h2>
+            <div class="carousel-reviews broun-block">
+              <div id="carousel-reviews" class="carousel slide" data-ride="carousel">
+                  
+                <div class="carousel-inner">
+                  <div class="item active">
+                    <div class="col-md-12 col-sm-12">
+                      <div class="block-text rel zmin">
+                        <a title="" href="#">Hercules</a>                            
+                        <p style="margin-top: 4%;">Never before has there been a good film portrayal of ancient Greece's favourite myth. So why would Hollywood start now? This latest attempt at bringing the son of Zeus to the big screen is brought to us by X-Men: The last Stand director Brett Ratner. If the name of the director wasn't enough to dissuade ...</p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="item">
+                    <div class="col-md-12 col-sm-12">
+                      <div class="block-text rel zmin">
+                        <a title="" href="#">Hercules</a>                            
+                        <p style="margin-top: 4%;">Never before has there been a good film portrayal of ancient Greece's favourite myth. So why would Hollywood start now? This latest attempt at bringing the son of Zeus to the big screen is brought to us by X-Men: The last Stand director Brett Ratner. If the name of the director wasn't enough to dissuade ...</p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="item">
+                    <div class="col-md-12 col-sm-12">
+                      <div class="block-text rel zmin">
+                        <a title="" href="#">Hercules</a>                            
+                        <p style="margin-top: 4%;">Never before has there been a good film portrayal of ancient Greece's favourite myth. So why would Hollywood start now? This latest attempt at bringing the son of Zeus to the big screen is brought to us by X-Men: The last Stand director Brett Ratner. If the name of the director wasn't enough to dissuade ...</p>
+                      </div>
+                    </div>
+                  </div>                            
+                </div>
+                <a class="left carousel-control" href="#carousel-reviews" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left icon-color"></span>
+                </a>
+                <a class="right carousel-control" href="#carousel-reviews" role="button" data-slide="next">
+                  <span class="glyphicon glyphicon-chevron-right icon-color"></span>
+                </a>
               </div>
             </div>
           </div>
