--- a/app/views/room_images/_room_image.html.erb
+++ b/app/views/room_images/_room_image.html.erb
@@ -1,5 +1,5 @@
 <div class="item"> 
-	<a href="" data-rel="prettyPhoto[gallery1]">
+	<a href="<%= room_image.image.url %>" data-rel="prettyPhoto[gallery1]">
 		<%= image_tag room_image.image.url, class: 'img-responsive' %>
 	</a> 
 </div>
