--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -27,7 +27,7 @@
       <div class="col-sm-12 col-md-8">
         <div id="owl-standard" class="owl-carousel">
           <div class="item"> 
-          	<a href="images/rooms/slider/room-slider-02.jpg" data-rel="prettyPhoto[gallery1]">
+          	<a href="<%= @room.image.url %>" data-rel="prettyPhoto[gallery1]">
           		<%= image_tag @room.image.url, class: 'img-responsive' %>
           	</a> 
           </div>
