--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -31,7 +31,7 @@
                         data-speed="1000" 
                         data-start="1900" 
                         data-easing="easeOutBack">
-            <a href="room-list.html" class="button btn btn-purple btn-lg">See rooms</a> 
+            <a href="<%= rooms_path %>" class="button btn btn-purple btn-lg">See rooms</a> 
                   </div>
         </li>
     <!-- Slide 2 -->
@@ -78,104 +78,7 @@
         <h2 class="lined-heading"><span>Guests Favorite Rooms</span></h2>
       </div>
       <!-- Room -->
-      <div class="col-sm-4">
-        <div class="room-thumb"> 
-          <%= image_tag 'img/rooms/room-01.jpg', class: 'img-responsive' %>
-          <div class="mask">
-            <div class="main">
-              <h5>Double bedroom</h5>
-              <div class="price">&euro; 99<span>a night</span></div>
-            </div>
-            <div class="content">
-              <p><span>A modern hotel room in Star Hotel</span> Nunc tempor erat in magna pulvinar fermentum. Pellentesque scelerisque at leo nec vestibulum. 
-                malesuada metus.</p>
-              <div class="row">
-                <div class="col-xs-6">
-                  <ul class="list-unstyled">
-                    <li><i class="fa fa-check-circle"></i> Incl. breakfast</li>
-                    <li><i class="fa fa-check-circle"></i> Private balcony</li>
-                    <li><i class="fa fa-check-circle"></i> Sea view</li>
-                  </ul>
-                </div>
-                <div class="col-xs-6">
-                  <ul class="list-unstyled">
-                    <li><i class="fa fa-check-circle"></i> Free Wi-Fi</li>
-                    <li><i class="fa fa-check-circle"></i> Incl. breakfast</li>
-                    <li><i class="fa fa-check-circle"></i> Bathroom</li>
-                  </ul>
-                </div>
-              </div>
-              <a href="room-detail.html" class="btn btn-primary btn-block">Read More</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Room -->
-      <div class="col-sm-4">
-        <div class="room-thumb"> 
-          <%= image_tag 'img/rooms/room-02.jpg', class: 'img-responsive' %>
-          <div class="mask">
-            <div class="main">
-              <h5>King Size Bedroom </h5>
-              <div class="price">&euro; 149<span>a night</span></div>
-            </div>
-            <div class="content">
-              <p><span>A modern hotel room in Star Hotel</span> Nunc tempor erat in magna pulvinar fermentum. Pellentesque scelerisque at leo nec vestibulum. 
-                malesuada metus.</p>
-              <div class="row">
-                <div class="col-xs-6">
-                  <ul class="list-unstyled">
-                    <li><i class="fa fa-check-circle"></i> Incl. breakfast</li>
-                    <li><i class="fa fa-check-circle"></i> Private balcony</li>
-                    <li><i class="fa fa-check-circle"></i> Sea view</li>
-                  </ul>
-                </div>
-                <div class="col-xs-6">
-                  <ul class="list-unstyled">
-                    <li><i class="fa fa-check-circle"></i> Free Wi-Fi</li>
-                    <li><i class="fa fa-check-circle"></i> Incl. breakfast</li>
-                    <li><i class="fa fa-check-circle"></i> Bathroom</li>
-                  </ul>
-                </div>
-              </div>
-              <a href="room-detail.html" class="btn btn-primary btn-block">Read More</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Room -->
-      <div class="col-sm-4">
-        <div class="room-thumb"> 
-          <%= image_tag 'img/rooms/room-03.jpg', class: 'img-responsive' %>
-          <div class="mask">
-            <div class="main">
-              <h5>Single room</h5>
-              <div class="price">&euro; 120<span>a night</span></div>
-            </div>
-            <div class="content">
-              <p><span>A modern hotel room in Star Hotel</span> Nunc tempor erat in magna pulvinar fermentum. Pellentesque scelerisque at leo nec vestibulum. 
-                malesuada metus.</p>
-              <div class="row">
-                <div class="col-xs-6">
-                  <ul class="list-unstyled">
-                    <li><i class="fa fa-check-circle"></i> Incl. breakfast</li>
-                    <li><i class="fa fa-check-circle"></i> Private balcony</li>
-                    <li><i class="fa fa-check-circle"></i> Sea view</li>
-                  </ul>
-                </div>
-                <div class="col-xs-6">
-                  <ul class="list-unstyled">
-                    <li><i class="fa fa-check-circle"></i> Free Wi-Fi</li>
-                    <li><i class="fa fa-check-circle"></i> Incl. breakfast</li>
-                    <li><i class="fa fa-check-circle"></i> Bathroom</li>
-                  </ul>
-                </div>
-              </div>
-              <a href="room-detail.html" class="btn btn-primary btn-block">Read More</a>
-            </div>
-          </div>
-        </div>
-      </div>
+      <%= render @rooms %>
     </div>
   </div>
 </section>
@@ -305,17 +208,3 @@
     </section>
   </div>
 </div>
-
-<!-- Call To Action -->
-<section id="call-to-action" class="mt100">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-8 col-sm-8 col-xs-12">
-        <h2>This is a Call to Action! Need a hotel/resort/inn template?</h2>
-      </div>
-      <div class="col-md-4 col-sm-4 col-xs-12">
-        <a href="http://themeforest.net/item/starhotel-responsive-hotel-booking-template/7784956" target="_blank" class="btn btn-default btn-lg pull-right">Purchase hotel template</a>
-      </div>
-    </div>
-  </div>
-</section>
