--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,50 +1,120 @@
-<div class="row">
-  <div class="col-sm-4 col-sm-offset-4">
-    <h1>Edit <%= resource_name.to_s.humanize %></h1>
-    <hr>
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-      <%= devise_error_messages! %>
+<div class="container">
+  <div class="card hovercard">
+    <div class="card-background">
+      <%= image_tag 'img/bg.jpg', class: 'card-bkimg' %>
+        <!-- http://lorempixel.com/850/280/people/9/ -->
+    </div>
+    <div class="useravatar">
+      <%= image_tag 'img/default-user.png' %>
+    </div>
+    <div class="card-info"> <span class="card-title"><%= current_user.username %></span></div>
+  </div>
+  <div class="btn-pref btn-group btn-group-justified btn-group-lg" role="group" aria-label="...">
+    <div class="btn-group" role="group">
+      <button type="button" id="stars" class="btn btn-primary btn-color-black" href="#tab1" data-toggle="tab"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+        <div class="hidden-xs">Edit <%= resource_name.to_s.humanize %></div>
+      </button>
+    </div>
+    <div class="btn-group" role="group">
+      <button type="button" id="favorites" class="btn btn-default btn-color-black" href="#tab2" data-toggle="tab"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
+      <div class="hidden-xs">Bookings</div>
+      </button>
+    </div>
+  </div>
+  <div class="well">
+    <div class="tab-content">
+      <div class="tab-pane fade in active" id="tab1">
+        <hr>
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+          <%= devise_error_messages! %>
 
-      <div class="form-group">
-        <%= f.label :username %><br />
-        <%= f.text_field :username, autofocus: true, class: 'form-control' %>
+          <div class="form-group">
+            <%= f.label :username %><br />
+            <%= f.text_field :username, autofocus: true, class: 'form-control btn-color-black' %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :email %><br />
+            <%= f.email_field :email, class: 'form-control btn-color-black'  %>
+          </div>
+
+          <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+            <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+          <% end %>
+
+          <div class="form-group">
+            <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+            <%= f.password_field :password, autocomplete: "off", class: 'form-control'  %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :password_confirmation %><br />
+            <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control btn-color-black'  %>
+          </div>
+
+          <% if !f.object.user_provider.present? %>
+            <div class="form-group">
+              <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+              <%= f.password_field :current_password, autocomplete: "off", class: 'form-control'  %>
+            </div>
+          <% end %>
+
+          <div class="form-group">
+            <%= f.submit "Update", class: 'btn btn-lg btn-block btn-primary btn-color-black' %>
+          </div>
+        <% end %>
+        <hr>
+
+        <h2>Cancel my account</h2>
+
+        <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), class: "btn btn-danger", data: { confirm: "Are you sure? You cannot undo this." }, method: :delete %></p>
+
+        <%= link_to "Back", :back %>
+        <hr>
       </div>
-
-      <div class="form-group">
-        <%= f.label :email %><br />
-        <%= f.email_field :email, class: 'form-control'  %>
+      <div class="tab-pane fade in" id="tab2">
+        <div class="row">
+          <% @bookings = current_user.bookings %>
+          <% if @bookings.count > 0 %>
+            <% @bookings.each do |b| %>
+              <div class="col-md-4">
+                <div class="room-thumb" style="float: none"> 
+                <%= image_tag b.room.image.url, class: 'img-responsive img-height' %>
+                  <div class="mask">
+                    <div class="main">
+                      <h5><%= b.room.category %> Bedroom</h5>
+                      <div class="price">&euro; <%= b.room.price %><span>a night</span></div>
+                    </div>
+                    <div class="content">
+                      <p><span>A modern hotel room in Star Hotel</span> <%= truncate(b.room.description, length: 130) %> </p>
+                      <div class="row">
+                        <div class="col-xs-6">
+                          <ul class="list-unstyled">
+                            <br> <li><i class="fa fa-check-circle"></i> <%= b.room.beds %> Beds </li> <br>
+                          </ul>
+                        </div>
+                        <div class="col-xs-6">
+                          <ul class="list-unstyled">
+                            <br> <li><i class="fa fa-check-circle"></i> <%= b.room.capacity %> People Capacity </li> <br>
+                          </ul>
+                        </div>
+                      </div>
+                      <a href="<%= room_path(b.room) %>" class="btn btn-primary btn-block btn-color-black">Details</a> 
+                    </div>
+                  </div>
+                </div>
+                <div class="booking-content">
+                  <p align="center">CheckIn: <strong> <%= b.check_in %> </strong></p>
+                  <p align="center">CheckOut: <strong> <%= b.check_out %> </strong></p>
+                  <p align="center">Guests: <strong> <%= b.guests %> </strong></p>
+                </div>
+              </div>
+            <% end %>
+          <% else %>
+            <p align="center"> <STRONG > No Bookings Yet </STRONG> </p>
+          <% end %>
+        </div>
       </div>
-
-      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-      <% end %>
-
-      <div class="form-group">
-        <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-        <%= f.password_field :password, autocomplete: "off", class: 'form-control'  %>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control'  %>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-        <%= f.password_field :current_password, autocomplete: "off", class: 'form-control'  %>
-      </div>
-
-      <div class="form-group">
-        <%= f.submit "Update", class: 'btn btn-lg btn-block btn-primary btn-color-black' %>
-      </div>
-    <% end %>
-    <hr>
-
-    <h2>Cancel my account</h2>
-
-    <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), class: "btn btn-danger", data: { confirm: "Are you sure? You cannot undo this." }, method: :delete %></p>
-
-    <%= link_to "Back", :back %>
-    <hr>
+    </div>
   </div>
 </div>
