--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -62,7 +62,7 @@
                         data-speed="1000" 
                         data-start="1900" 
                         data-easing="easeOutBack">
-            <a href="room-detail.html" class="button btn btn-purple btn-lg">Book this room</a> 
+            <a href="<%= rooms_path %>" class="button btn btn-purple btn-lg">See rooms</a> 
                   </div>
         </li>
       </ul>
