--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -6,7 +6,7 @@
         <!-- Slide 1 -->
         <li data-transition="fade" data-slotamount="7" data-masterspeed="1500" > 
           <!-- Main Image -->  
-          <%= image_tag 'img/slides/slide-bg.jpg', style: 'opacity: 0', data: { bgfit: 'cover', bgposition: 'left bottom', bgrepeat: 'no-repeat' } %>
+          <%= image_tag 'img/slides/slide1.jpg', style: 'opacity: 0', data: { bgfit: 'cover', bgposition: 'left bottom', bgrepeat: 'no-repeat' } %>
           <!-- Layers -->           
           <!-- Layer 1 -->
           <div class="caption sft revolution-starhotel bigtext"  
@@ -37,7 +37,7 @@
     <!-- Slide 2 -->
         <li data-transition="boxfade" data-slotamount="7" data-masterspeed="1000" > 
           <!-- Main Image --> 
-          <%= image_tag 'img/slides/slide-bg-02.jpg', data: { bgfit: 'cover', bgposition: 'left top', bgrepeat: 'no-repeat' } %>
+          <%= image_tag 'img/slides/slide2.jpg', data: { bgfit: 'cover', bgposition: 'left top', bgrepeat: 'no-repeat' } %>
           <!-- Layers -->           
           <!-- Layer 1 -->
           <div class="caption sft revolution-starhotel bigtext"  
@@ -121,90 +121,3 @@
     </div>
   </div>
 </section>
-
-<!-- Gallery -->
-<section class="gallery-slider mt100">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <h2 class="lined-heading"><span>Gallery</span></h2>
-      </div>
-    </div>
-  </div>
-  <div id="owl-gallery" class="owl-carousel">
-    <div class="item"><a href="images/gallery/1.jpg" data-rel="prettyPhoto[gallery1]">
-      <%= image_tag 'img/gallery/1.jpg', class: 'fa fa-search' %>
-    </a></div>
-    <div class="item"><a href="images/gallery/2.jpg" data-rel="prettyPhoto[gallery1]">
-      <%= image_tag 'img/gallery/2.jpg', class: 'fa fa-search' %></a></div>
-    <div class="item"><a href="images/gallery/3.jpg" data-rel="prettyPhoto[gallery1]">
-      <%= image_tag 'img/gallery/3.jpg', class: 'fa fa-search' %></a></div>
-    <div class="item"><a href="images/gallery/4.jpg" data-rel="prettyPhoto[gallery1]">
-      <%= image_tag 'img/gallery/4.jpg', class: 'fa fa-search' %></a></div>
-  </div>
-</section>
-
-<div class="container">
-  <div class="row"> 
-    <!-- Testimonials -->
-    <section class="testimonials mt100">
-      <div class="col-md-6">
-        <h2 class="lined-heading bounceInLeft appear" data-start="0"><span>What Other Visitors Experienced</span></h2>
-        <div id="owl-reviews" class="owl-carousel">
-          <div class="item">
-            <div class="row">
-              <div class="col-lg-3 col-md-4 col-sm-2 col-xs-12"> 
-                <%= image_tag 'img/reviews/review-01.jpg', class: 'img-circle' %>
-              </div>
-              <div class="col-lg-9 col-md-8 col-sm-10 col-xs-12">
-                <div class="text-balloon">Searched the internet and i found, booked and visited this hotel that i like to call utopia... <span>Kim Jones, Single Room</span> </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-3 col-md-4 col-sm-2 col-xs-12"> <%= image_tag 'img/reviews/review-02.jpg', class: 'img-circle' %></div>
-              <div class="col-lg-9 col-md-8 col-sm-10 col-xs-12">
-                <div class="text-balloon">I give it a 5 out of 5! Great hotel, friendly staff, clean, relaxing... Yep i'm coming back! ;-) <span>Sandra Donnathan, Double Room</span> </div>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <div class="row">
-              <div class="col-lg-3 col-md-4 col-sm-2 col-xs-12"> <%= image_tag 'img/reviews/review-03.jpg', class: 'img-circle' %></div>
-              <div class="col-lg-9 col-md-8 col-sm-10 col-xs-12">
-                <div class="text-balloon">Such a nice place... Next time i will book a 3 weeks stay at this place. <span>Rosanne O'Donald, Single Room</span> </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-3 col-md-4 col-sm-2 col-xs-12"> <%= image_tag 'img/reviews/review-04.jpg', class: 'img-circle' %></div>
-              <div class="col-lg-9 col-md-8 col-sm-10 col-xs-12">
-                <div class="text-balloon">By far the best hotel in the city! Location is nice and the service is great! <span>Carl Adams, Single Room</span> </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    
-    <!-- About -->
-    <section class="about mt100">
-      <div class="col-md-6">
-        <h2 class="lined-heading bounceInRight appear" data-start="800"><span>Hotel Tabs</span></h2>
-        <!-- Nav tabs -->
-        <ul class="nav nav-tabs">
-          <li class="active"><a href="#hotel" data-toggle="tab">Our hotels</a></li>
-          <li><a href="#events" data-toggle="tab">Events</a></li>
-          <li><a href="#kids" data-toggle="tab">Kids</a></li>
-        </ul>
-        <!-- Tab panes -->
-        <div class="tab-content">
-          <div class="tab-pane fade in active" id="hotel">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum eleifend augue, quis rhoncus purus fermentum. In hendrerit risus arcu, in eleifend metus dapibus varius. Nulla dolor sapien, laoreet vel tincidunt non, egestas non justo. Phasellus et mattis lectus, et gravida urna.</p>
-            <p> <%= image_tag 'img/tab/restaurant-01.jpg', class: 'pull-right' %> Donec pretium sem non tincidunt iaculis. Nunc at pharetra eros, a varius leo. Mauris id hendrerit justo. Mauris egestas magna vitae nisi ultricies semper. Nam vitae suscipit magna. Nam et felis nulla. Ut nec magna tortor. Nulla dolor sapien, laoreet vel tincidunt non, egestas non justo. </p>
-          </div>
-          <div class="tab-pane fade" id="events">Phasellus sodales justo felis, a vestibulum risus mattis vitae. Aliquam vitae varius elit, non facilisis massa. Vestibulum luctus diam mollis gravida bibendum. Aliquam mattis velit dolor, sit amet semper erat auctor vel. Integer auctor in dui ac vehicula. Integer fermentum nunc ut arcu feugiat, nec placerat nunc tincidunt. Pellentesque in massa eu augue placerat cursus sed quis magna.</div>
-          <div class="tab-pane fade" id="kids">Aa vestibulum risus mattis vitae. Aliquam vitae varius elit, non facilisis massa. Vestibulum luctus diam mollis gravida bibendum. Aliquam mattis velit dolor, sit amet semper erat auctor vel. Integer auctor in dui ac vehicula. Integer fermentum nunc ut arcu feugiat, nec placerat nunc tincidunt. Pellentesque in massa eu augue placerat cursus sed quis magna.</div>
-        </div>
-      </div>
-    </section>
-  </div>
-</div>
